# gmail-mcp-send-to-list-only

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: secret-scanning.yml  tests.yml
docs/: linux-vps-setup.md
src/gmail_mcp_send_to_list_only/: __init__.py  auth.py  cli.py  config.py  delivery.py  gmail_client.py  server.py
tests/: e2e_server.py  test_auth.py  test_cli.py  test_config.py  test_delivery.py  test_gmail_client.py  test_mcp_stdio.py  test_safety_contract.py  test_server.py
