[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-mcp-send-to-list-only"
version = "0.1.1"
description = "Local Gmail MCP that sends only to a fixed recipient allowlist"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-api-python-client>=2.0,<3",
  "google-auth>=2.0,<3",
  "google-auth-httplib2>=0.2,<1",
  "google-auth-oauthlib>=1.0,<2",
  "mcp>=1.27,<2",
]

[project.scripts]
gmail-mcp-send-to-list-only = "gmail_mcp_send_to_list_only.cli:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.0,<9",
  "ruff>=0.12,<1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
